slurm_output/old/slurm-48433468.out
compute-a-16-102.o2.rc.hms.harvard.edu
  File "multithreading.py", line 54
    if queue!=None:
                  ^
SyntaxError: invalid syntax
